--- a/backend/bank-client/src/Styles/style.css
+++ b/backend/bank-client/src/Styles/style.css
@@ -229,7 +229,7 @@ input[type=number]::-webkit-outer-spin-button {
     height: 650px;
     width: 1000px;
     background-color: rgba(103, 107, 141, 0.185);
-    position: absolute;
+    position: relative;
     transform: translate(-50%, -50%);
     top: 55%;
     left: 50%;
